fix landscape display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -300,9 +300,9 @@ header .intro-text .intro-heading {
     margin-bottom: 107px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 300%;
+    font-size: 360%;
     font-weight: 700;
-    line-height: 28px;
+    line-height: 36px;
     opacity: 1;
 }
 
